--- a/web/chuti.html
+++ b/web/chuti.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="renderer" content="webkit|ie-comp|ie-stand">
-<title>我的工作台 - EasySchool</title>
+<title>出题</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="robots" content="noindex,nofollow">
